--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=CRUD-BIBLIOTECA
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dbBiblioteca
+spring.datasource.username=root
+spring.datasource.password=Kanim21%
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.port=8090
